feat(auth): Изменен ответ метода signin Отправляются следющие данные о пользователе: - email - username
